# arducam_AI_module

./: CMakeLists.txt  Kconfig  README.md
drivers/video/arducam_mega/: CMakeLists.txt  arducam_mega.c
dts/bindings/video/: arducam,mega.yaml
include/: arducam_mega.h
samples/drivers/video/arducam_mega/: CMakeLists.txt  main.c  prj.conf  sample.yaml
samples/drivers/video/arducam_mega/boards/: nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay
samples/drivers/video/arducam_mega/src/: main.c
zephyr/: module.yml
